# Cpluplus

./: .gitignore  README.md
blocks/: blkDebug.cpp  blkDebug.hpp  blkMoveRef.hpp  blkText.cpp
centrale training/blocks/: blkBeside.cpp  blkBeside.hpp  blkBlock.hpp  blkMoveRef.cpp  blkOver.cpp  blkOver.hpp  blkText.hpp
centrale training/futures/src/: CMakeLists.txt  test_utils.hpp
centrale training/life-cycle-in-RAM/: example-001-001-allocation.cpp  example-001-002-copy.cpp  example-002-001-move.cpp  example-002-002-movefun.cpp  example-003-001-text.cpp  example-008-001-return.cpp
centrale training/logic/: test-001-003-wires.cpp  test-003-002-and.cpp  test-004-002-n_bit_adder.cpp
centrale training/matrices/: test-Matrix.cpp
centrale training/petri/: petriTransition.cpp  petriTransition.hpp  philosophers.cpp  test-003-network-redlight.cpp  test-004-philosophers.cpp
centrale training/struct/: example-003.cpp  example-004.cpp
centrale training/thread_pool/src/: CMakeLists.txt  ThreadPool.cpp  test_utils.hpp
futures/src/: futures.cpp
life-cycle-in-RAM/: example-002-003-moveop.cpp  example-004-001-new.cpp  example-005-001-array.cpp  example-006-001-vector.cpp  example-006-002-vector.cpp  example-007-001-emplace.cpp  example-007-002-emplace-back.cpp  example-008-002-returnref.cpp
logic/: adder.hpp  gate.hpp  test-004-001-one_bit_adder.cpp
matrices/: Matrix.hpp
petri/: network-redlights.cpp  petriNetwork.cpp  petriNetwork.hpp  petriPool.cpp  philosophers.hpp  test-005-deadlock.cpp
thread_pool/src/: ThreadPool.hpp  pool_test.cpp
(+30 files in other folders)
